<resources>
    <string name="app_name">BinThere</string>
    <string name="addPoiHeader">Add POI</string>
    <string name="poiSubtitle">Please Give Generously</string>
    <string name="addPoiButton">Add POI</string>
    <string name="uploadPhotoButton">Upload Photo</string>
    <string name="bin">Bin</string>
    <string name="litter">Litter</string>
    <string name="title">Name</string>
    <string name="total">Total so Far</string>
    <string name="poiListTitle">POIs Report</string>
    <string name="enter_name">Enter Name</string>
    <string name="action_addPoi">Add POI</string>
    <string name="action_poilist">POI List</string>
    <string name="hint_poiTitle">POI Title</string>
    <string name="hint_poiDescription">Description</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <string name="nav_header_title">BinThere</string>
    <string name="nav_header_subtitle">binthere@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About Us</string>
    <string name="about_title">Homer for President !!</string>
    <string name="about_message">Hi, I\'m Binnie\n\nHere to help you find the nearest bin and keep our streets sparkling clean!</string>

    <string name="poisNotFound">No POIs Yet…</string>
    <string name="poiError">Error : Couldn\'t Create a POI…</string>
    <string name="poiDetails">POI Details</string>

    <string name="poiNameLabel">Name: </string>
    <string name="poiDescriptionLabel">Description :</string>
    <string name="message">Message :</string>
    <string name="upvotes">UpVotes :</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="select_image">Select Image</string>
</resources>